scripts/seo/__tests__/fixtures/r-seo-09/negative/03-default-export-rename/head.tsx
export default function NewName() {
  return <div />;
}
